--- a/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
+++ b/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
@@ -2,10 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <PackageId>DragonFruit.Orbit.API</PackageId>
+    <Version>2020.3</Version>
+    <Authors>DragonFruit Network</Authors>
+    <Product>Orbit API</Product>
+    <Description>osu! API v1 and v2 access</Description>
+    <Copyright>Copyright 2020 (C) DragonFruit Network and ppy Pty Ltd.</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DragonFruit.Common.API" Version="2020.2.0" />
+    <PackageReference Include="DragonFruit.Common.Data" Version="2020.3.1.2" />
   </ItemGroup>
 
 </Project>
