update dragonfruit.common and add more documentation

--- a/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
+++ b/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DragonFruit.Common.Data" Version="2020.519.27-beta" />
+    <PackageReference Include="DragonFruit.Common.Data" Version="2020.610.29" />
   </ItemGroup>
 
 </Project>
