--- a/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
+++ b/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
@@ -3,14 +3,21 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <PackageId>DragonFruit.Orbit.API</PackageId>
-    <Version>2020.3</Version>
     <Authors>DragonFruit Network</Authors>
     <Product>Orbit API</Product>
-    <Description>osu! API v1 and v2 access</Description>
-    <Copyright>Copyright 2020 (C) DragonFruit Network and ppy Pty Ltd.</Copyright>
+    <Description>A libary for osu! API v1 and v2</Description>
+    <Copyright>Copyright 2020 (C) DragonFruit Network</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>orbit.png</PackageIcon>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\src\orbit.png">
+      <Pack>true</Pack>
+      <PackagePath>.</PackagePath>
+    </None>
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="DragonFruit.Common.Data" Version="2020.610.29" />
   </ItemGroup>
