--- a/.github/workflows/codequality.yaml
+++ b/.github/workflows/codequality.yaml
@@ -1,6 +1,10 @@
-﻿name: Code Quality
+name: Code Quality
 
-on: [ pull_request, push ]
+on:
+  pull_request:
+    branches: master
+  push:
+    branches: master
 
 jobs:
   quality:
