--- a/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
+++ b/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="DragonFruit.Common.Data" Version="2020.610.29" />
+    <PackageReference Include="DragonFruit.Common.Data" Version="2020.712.4-beta" />
   </ItemGroup>
 
 </Project>
