--- a/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
+++ b/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
@@ -20,6 +20,7 @@
   
   <ItemGroup>
     <PackageReference Include="DragonFruit.Common.Data" Version="2020.714.6-beta" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.6" />
   </ItemGroup>
 
 </Project>
