--- a/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
+++ b/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
@@ -19,8 +19,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="DragonFruit.Common.Data" Version="2020.714.6-beta" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.6" />
+    <PackageReference Include="DragonFruit.Common.Data" Version="2020.807.11" />
   </ItemGroup>
 
 </Project>
