cleanup annotations and start adding leaderboard support

--- a/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
+++ b/DragonFruit.Orbit.API/DragonFruit.Orbit.API.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <Folder Include="Beatmaps" />
       <Folder Include="Changelogs" />
+      <Folder Include="Leaderboards\Requests" />
       <Folder Include="Users" />
     </ItemGroup>
 
