--- a/.github/workflows/codequality.yaml
+++ b/.github/workflows/codequality.yaml
@@ -1,10 +1,6 @@
 name: Code Quality
 
-on:
-  pull_request:
-    branches: master
-  push:
-    branches: master
+on: [ push, pull_request ]
 
 jobs:
   quality:
