--- a/.github/workflows/codequality.yaml
+++ b/.github/workflows/codequality.yaml
@@ -1,6 +1,10 @@
 name: Code Quality
 
-on: [ push, pull_request ]
+on:
+  pull_request:
+    branches: master
+  push:
+    branches: master
 
 jobs:
   quality:
@@ -16,7 +20,7 @@ jobs:
           powershell Invoke-WebRequest -Uri "https://github.com/dragonfruitnetwork/CodeCutter/releases/latest/download/DragonFruit.CodeCutter.exe" -OutFile ".\DragonFruit.CodeCutter.exe"
 
       - name: "Setup MSBuild"
-        uses: microsoft/setup-msbuild@v1.0.0
+        uses: microsoft/setup-msbuild@v1.0.2
 
       - name: NuGet Restore
         run: nuget restore
