--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -9,6 +9,10 @@ jobs:
   publish:
     runs-on: windows-latest
 
+    env:
+      name: "DragonFruit.Orbit.Api"
+      project: "src\\DragonFruit.Orbit.API.csproj.csproj"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -16,10 +20,13 @@ jobs:
       - name: Setup PowerShell Policy
         run: Set-ExecutionPolicy -ExecutionPolicy Unrestricted -Force
 
+      - name: Download Publish Script
+        run: powershell Invoke-WebRequest -Uri "https://raw.githubusercontent.com/dragonfruitnetwork/publish-script/main/nuget.ps1" -OutFile ".\nuget.ps1"
+
       - name: NuGet Build and Publish (Release)
-        run: ./res/Nuget.ps1 -ApiKey ${{ secrets.NUGET_KEY }}
+        run: .\nuget.ps1 -TargetName $env:name -TargetProject $env:project -ApiKey ${{ secrets.NUGET_KEY }}
         if: "!github.event.release.prerelease"
 
       - name: Nuget Build and Publish (Beta)
-        run: ./res/Nuget.ps1 -ApiKey ${{ secrets.NUGET_KEY }} -Suffix "-beta"
+        run: .\nuget.ps1 -TargetName $env:name -TargetProject $env:project -ApiKey ${{ secrets.NUGET_KEY }} -Suffix "-beta"
         if: "github.event.release.prerelease"
