--- a/src/DragonFruit.Orbit.API.csproj
+++ b/src/DragonFruit.Orbit.API.csproj
@@ -22,8 +22,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DragonFruit.Common.Data" Version="2021.910.47" />
-        <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
+        <PackageReference Include="DragonFruit.Common.Data" Version="2021.1130.58-beta" />
+        <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
     </ItemGroup>
 
 </Project>
