--- a/tests/DragonFruit.Orbit.Api.Tests.csproj
+++ b/tests/DragonFruit.Orbit.Api.Tests.csproj
@@ -1,9 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net5.0;netcoreapp3.1</TargetFrameworks>
-
         <IsPackable>false</IsPackable>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
