--- a/src/DragonFruit.Orbit.Api.csproj
+++ b/src/DragonFruit.Orbit.Api.csproj
@@ -22,8 +22,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DragonFruit.Data" Version="2021.1130.58-beta" />
-        <PackageReference Include="DragonFruit.Data.Serializers.Newtonsoft" Version="2021.1130.58-beta" />
+        <PackageReference Include="DragonFruit.Data" Version="2021.1218.0" />
+        <PackageReference Include="DragonFruit.Data.Serializers.Newtonsoft" Version="2021.1218.0" />
         <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
     </ItemGroup>
 
